fix select; add appHeight for mobile; check popup-collapse state and add/remove fixed_body class

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -233,6 +233,12 @@ table {
   border-spacing: 0;
 }
 
+select {
+  appearance: none;
+  -webkit-appearance: none;
+  color: #1e1e1e;
+}
+
 body {
   overflow-x: hidden;
   position: relative;
@@ -251,6 +257,11 @@ body {
   -webkit-font-smoothing: antialiased; /* For WebKit browsers (Chrome, Safari) */
   -moz-osx-font-smoothing: grayscale;  /* For Firefox on macOS */
   
+}
+html.fixed_body body,
+html.fixed_body {
+  overflow: hidden !important;
+  height: 100% !important;
 }
 
 img {
